[package]
name = "with_daemon"
description = "An async client-daemon abstraction framework"
authors = ["Michał Trybus <komar007@gmail.com>"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/komar007/with_daemon"
readme = "README.md"
documentation = "https://docs.rs/with_daemon"

categories = ["concurrency", "network-programming", "asynchronous", "caching"]
keywords = ["daemon", "daemonize", "linux", "unix", "async"]

version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "fs", "sync"] }
log = "0.4"
fork = "0.2"
daemonize = "0.5"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
futures = "0.3"
thiserror = "1.0"

[dev-dependencies]
reqwest = { version = "0.12" }
env_logger = "0.11"
